# mutag-calib

./: .gitignore  DATACARD_README.md  README.md  get_output.py  pyproject.toml  requirements.txt  run_prescale_analysis.sh  setup.py  setup_combine.sh
datasets/: DATA_BTagMu_2025.json  DATA_BTagMu_2025_redirector.json  DATA_BTagMu_run2.json  DATA_BTagMu_run2_redirector.json  DATA_BTagMu_run3.json  DATA_BTagMu_run3_2024.json  DATA_BTagMu_run3_2024_redirector.json  DATA_BTagMu_run3_redirector.json  MC_QCD_Madgraph_run2.json  MC_QCD_Madgraph_run2_redirector.json  MC_QCD_Madgraph_run3.json  MC_QCD_Madgraph_run3_missing_redirector.json  MC_QCD_Madgraph_run3_redirector.json  MC_QCD_MuEnriched_800to1000_run3.json  MC_QCD_MuEnriched_80to120_run3.json  MC_QCD_MuEnriched_missing_run3.json  MC_QCD_MuEnriched_missing_run3_redirector.json  MC_QCD_MuEnriched_run2.json  MC_QCD_MuEnriched_run2_redirector.json  MC_QCD_MuEnriched_run3.json  MC_QCD_MuEnriched_run3_2024.json  MC_QCD_MuEnriched_run3_2024_redirector.json  MC_QCD_MuEnriched_run3_missing_redirector.json  MC_QCD_MuEnriched_run3_redirector.json  MC_SingleTop_fullyhadronic_run3.json  MC_SingleTop_fullyhadronic_run3_redirector.json  MC_SingleTop_semileptonic_run3.json  MC_SingleTop_semileptonic_run3_redirector.json  MC_TTto4Q_run2.json  MC_TTto4Q_run2_redirector.json  MC_TTto4Q_run3.json  MC_TTto4Q_run3_2024.json  MC_TTto4Q_run3_2024_redirector.json  MC_TTto4Q_run3_2024_test_redirector.json  MC_TTto4Q_run3_missing_redirector.json  MC_TTto4Q_run3_redirector.json  MC_VJets_run2.json  MC_VJets_run2_redirector.json  MC_VJets_run3.json  MC_VJets_run3_missing_redirector.json  (+41 more)
fit_templates/: config.json  output_TTto4Q.coffea  parameters_dump.yaml
fit_templates_HHbbtt/: config.json  output_DATA_BTagMu_2022_postEE_EraE.coffea  output_DATA_BTagMu_2022_postEE_EraF.coffea  output_DATA_BTagMu_2022_postEE_EraG.coffea  output_DATA_BTagMu_2022_preEE_EraC.coffea  output_DATA_BTagMu_2022_preEE_EraD.coffea  (+36 more)
(+332 files in other folders)
