[build-system]
requires = ["setuptools", "wheel"]
#build-backend = "setuptools.build_meta"

[project]
name = "mutag_calib"
description = "Repository for the calibration of large-radius jets with the mu-tagged method based on the PocketCoffea analysis workflow."
authors = [
    {name = "Matteo Marchegiani", email = "matteo.marchegiani@cern.ch"}]
license = {text = "BSD-3-Clause"}
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed"]
dynamic = ["version", "dependencies"]
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/mmarchegiani/mutag-calib"
Issues = "https://github.com/mmarchegiani/mutag-calib/issues"
Discussions = "https://github.com/mmarchegiani/mutag-calib/discussions"
Changelog = "https://github.com/mmarchegiani/mutag-calib/releases"

[tool.setuptools.dynamic]
#version = {attr = "configs.__meta__.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
#dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["mutag_calib*"]
exclude = ["tests/*", "output/*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
mutag_calib = ["mutag_calib/configs/*.txt",
              "mutag_calib/configs/*.yaml",
              "mutag_calib/configs/*.json",
              "mutag_calib/configs/*.txt.gz"]
